[project]
name = "ppalan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.107.1",
    "apscheduler>=3.11.2",
    "flask>=3.1.3",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "matplotlib>=3.10.8",
    "openai-agents>=0.3.3",
    "pandas>=3.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "slack-sdk>=3.42.0",
    "tableauserverclient>=0.40",
    "twilio>=9.10.9",
]
