[project]
name = "twilio-conversations-demo"
version = "0.1.0"
description = "Twilio Conversations Layer demo — Orchestration, Memory, Intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "anthropic>=0.107.1",
    "twilio>=9.10.9",
    "python-dotenv>=1.1.1",
]
